# awaken

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  README.zh-CN.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/awaken/: Cargo.toml
crates/awaken-agent/: Cargo.toml
crates/awaken-agent/src/: lib.rs
crates/awaken-contract/: Cargo.toml
crates/awaken-contract/src/: agent_spec_patch.rs  builtin_seed.rs  config_record.rs  config_validation.rs  lib.rs  registry_spec.rs  skill_allowed_tools.rs  skill_spec.rs  thread.rs
crates/awaken-contract/tests/: agent_spec_catalog.rs  agent_spec_patch.rs  builtin_seed.rs  config_record.rs  contract_integration.rs
crates/awaken-doctest/: Cargo.toml
crates/awaken-doctest/examples/: README.md  agent_spec.rs  ai_sdk_payloads.rs  cancellation.rs  deferred_tool.rs  effect_spec.rs  error_variants.rs  event_sink.rs  http_app_builder.rs  mcp_server_spec.rs  plugin_registrar.rs  remote_endpoint.rs  run_lifecycle.rs  scheduled_action.rs  skill_spec.rs  state_command.rs  state_key.rs  thread_store_trait.rs  tool_basic.rs  tool_resume.rs  typed_tool.rs
crates/awaken-doctest/src/: lib.rs
crates/awaken-eval/: Cargo.toml  baseline.ndjson
crates/awaken-eval/fixtures/: 03_token_budget.json  05_error_path.json
crates/awaken-eval/src/: curate.rs  dataset.rs  eval_run.rs  eval_run_test.rs  expectation.rs  fixture.rs  judge.rs  lib.rs  outcome.rs  outcome_test.rs  replay.rs  report.rs  report_test.rs  runtime_replayer.rs  runtime_replayer_test.rs  score.rs  score_test.rs  test_support.rs
crates/awaken-eval/tests/: eval_integration.rs  judge_tensorzero.rs
crates/awaken-ext-deferred-tools/: Cargo.toml
crates/awaken-ext-deferred-tools/src/: config.rs  lib.rs  policy.rs  state.rs  tool_search.rs
crates/awaken-ext-mcp/: Cargo.toml
crates/awaken-ext-mcp/src/: error.rs  lib.rs  manager.rs  plugin.rs  sampling.rs  transport.rs
crates/awaken-ext-mcp/tests/: e2e_server_everything.rs  mcp_tests.rs
crates/awaken-ext-observability/: Cargo.toml
crates/awaken-ext-observability/src/: attribution_fills_tests.rs  batching.rs  composite.rs  genai_backfill_tests.rs  lib.rs  lib_test.rs  metrics.rs  otel.rs  otel_attribution_test.rs  otel_test.rs  persistent.rs  persistent_adapter_test.rs  persistent_test.rs  plugin.rs  prometheus.rs  runtime_stats.rs  sink.rs  stats.rs  wiring.rs
crates/awaken-ext-observability/tests/: observability_integration.rs  wiring_integration.rs
crates/awaken-ext-permission/: Cargo.toml
crates/awaken-ext-permission/src/: actions.rs  config.rs  lib.rs  matcher.rs  plugin.rs  rules.rs  state.rs
crates/awaken-ext-permission/tests/: permission_tests.rs  skill_elevation_tests.rs
crates/awaken-ext-reminder/: Cargo.toml
crates/awaken-ext-reminder/src/: config.rs  lib.rs  output_matcher.rs  plugin.rs  rule.rs
crates/awaken-ext-reminder/tests/: reminder_tests.rs
crates/awaken-ext-web-search/: Cargo.toml
crates/awaken-ext-web-search/src/: lib.rs  tool.rs
crates/awaken-runtime/: Cargo.toml
crates/awaken-runtime/src/: builder.rs  builder_tests.rs  cancellation.rs  checkpoint_store.rs  child_agent.rs  delegation.rs  error.rs  event_buffer.rs  inbox.rs  lib.rs  retry.rs  run.rs
crates/awaken-runtime/tests/: background_task_lifecycle.rs  builder_commit_coordinator.rs  child_agent_seed.rs  event_lifecycle.rs  llm_retry_regressions.rs  profile_store_integration.rs  public_api_compat.rs  public_api_compat_extended.rs  shared_state_integration.rs  tool_side_effects.rs
crates/awaken-server/: Cargo.toml
crates/awaken-server-contract/: Cargo.toml
crates/awaken-server-contract/src/: lib.rs
crates/awaken-server/src/: admin_assistant.rs  admin_routes.rs  app.rs  app_test.rs  config_routes.rs  durable_message_sink.rs  error.rs  eval_limits.rs  eval_router.rs  eval_routes_mod.rs  event_relay.rs  event_routes.rs  http_run.rs  http_sse.rs  lib.rs  mailbox.rs  message_convert.rs  metrics.rs  outbox_relay.rs  protocol_fanout.rs  protocol_projector.rs  protocol_projector_tests.rs  protocol_replay_state.rs  query.rs  request.rs  route_modules.rs  routes.rs  routes_test.rs  run_dispatch.rs  run_dispatcher.rs  scope.rs  system_routes.rs
crates/awaken-server/tests/: a2a_gateway.rs  a2a_http.rs  a2a_loopback.rs  acp_stdio.rs  admin_security.rs  agent_dashboard_e2e.rs  agent_runtime_stats.rs  ai_sdk_multi_turn.rs  audit_log_routes.rs  config_api.rs  config_backends.rs  cross_crate_integration_matrix.rs  e2e_a2ui.rs  e2e_deepseek.rs  e2e_http_matrix.rs  e2e_nats_postgres.rs  e2e_tensorzero.rs  eval_api.rs  eval_runtime_replay.rs  explicit_composition.rs  fault_injection.rs  functional_protocol_matrix.rs  http_api.rs  nats_gateway.rs  phoenix_observability_e2e.rs  protocol_a2a.rs  protocol_acp.rs  protocol_ag_ui.rs  protocol_ag_ui_e2e.rs  protocol_ai_sdk.rs  protocol_mcp.rs  protocol_parity.rs  public_api_compat.rs  public_api_compat_extended.rs  restore_routes.rs  run_api.rs  runtime_catalog_validation.rs  trace_retention.rs  trace_routes.rs  transport.rs  (+2 more)
crates/awaken-stores/: Cargo.toml
crates/awaken-stores/benches/: mailbox_ops.rs
crates/awaken-stores/examples/: rotating_api_key.rs
crates/awaken-stores/src/: commit_batch.rs  file.rs  file_commit_coordinator.rs  file_versioned_registry.rs  lib.rs  mailbox_state.rs  memory.rs  memory_commit_coordinator.rs  memory_event_store.rs  memory_mailbox.rs  memory_outbox.rs  message_validation.rs  (+16 more)
crates/awaken-tool-pattern/: Cargo.toml
crates/tirea-agentos/: Cargo.toml
crates/tirea-extension-observability/: Cargo.toml
examples/: Cargo.toml  live_test.rs  multi_turn.rs  tool_call_live.rs
examples/ai-sdk-starter/: README.md  package-lock.json  package.json
examples/copilotkit-starter/: README.md  package-lock.json  package.json
examples/examples/: ai_sdk_starter.rs  copilotkit_starter.rs  generative_ui.rs  research.rs  travel.rs
examples/openui-chat/: index.html  package-lock.json  package.json  vite.config.ts
examples/shared/: mcp-ui-demo-server.py
examples/src/: lib.rs  research.rs  travel.rs
(+1735 files in other folders)
