[package]
name = "awaken-examples"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "awaken_examples"
path = "src/lib.rs"

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
awaken-server = { workspace = true }
awaken-stores = { workspace = true, features = ["file"] }
awaken-ext-permission = { workspace = true }
awaken-ext-observability = { workspace = true }
awaken-ext-generative-ui = { workspace = true, features = ["openui", "json-render"] }
awaken-ext-deferred-tools = { workspace = true }
awaken-ext-mcp = { workspace = true }
awaken-ext-skills = { workspace = true }
awaken-ext-reminder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
axum = { workspace = true, features = ["http1", "json", "tokio"] }
clap = { workspace = true }
genai = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }

[[example]]
name = "generative_ui"
path = "examples/generative_ui.rs"

[lints]
workspace = true
