[package]
name = "awaken-agent"
version.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/awaken-agent"
edition.workspace = true
description = "Compatibility umbrella crate re-exporting awaken"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence", "asynchronous"]

[lib]
name = "awaken"
doc = false
doctest = false

[dependencies]
awaken_core = { package = "awaken", version = "0.6.1-dev", path = "../awaken", default-features = false }

[features]
default = ["full"]
permission = ["awaken_core/permission"]
observability = ["awaken_core/observability"]
mcp = ["awaken_core/mcp"]
skills = ["awaken_core/skills"]
reminder = ["awaken_core/reminder"]
server = ["awaken_core/server"]
generative-ui = ["awaken_core/generative-ui"]
full = ["awaken_core/full"]

[lints]
workspace = true
