[package]
name = "awaken-contract"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "Core types, traits, and state model for the Awaken AI agent runtime"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
typedmap = { workspace = true }
uuid = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
