[package]
name = "awaken-contract"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "Compatibility facade for Awaken runtime and server contracts"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence"]

[dependencies]
awaken-runtime-contract = { workspace = true }
awaken-server-contract = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
