[package]
name = "awaken-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Fixture-driven replay and scoring framework for awaken agent runs"

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
awaken-ext-observability = { workspace = true }
awaken-stores = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true }

# Optional — only pulled in when the `llm-judge` feature is enabled.
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
reqwest = { workspace = true, features = ["blocking"] }

[features]
default = []
# LLM-backed grading via TensorZero `[functions.judge]`. Adds a reqwest
# dependency and enables the `judge` module.
llm-judge = ["dep:reqwest"]

[lints]
workspace = true
