[package]
name = "awaken-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Fixture-driven replay and scoring framework for awaken agent runs"

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
awaken-ext-observability = { workspace = true }
awaken-stores = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true }

# HTTP client for the `push` / `run` / `pull` CLI subcommands (ADR-0032 D8)
# and the optional LLM-backed grader (`llm-judge` feature).
reqwest = { workspace = true, features = ["json"] }

# ULID for globally unique, lexicographically-sortable EvalRun ids.
ulid = "1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }

[features]
default = []
# LLM-backed grading via TensorZero `[functions.judge]`. Enables the
# `judge` module; reqwest is a base dependency, no extra feature flag.
llm-judge = []

[lints]
workspace = true
