[package]
name = "awaken-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fixture-driven replay and scoring framework for awaken agent runs"

[dependencies]
awaken-runtime-contract = { workspace = true }
awaken-runtime = { workspace = true }
awaken-ext-observability = { workspace = true }
awaken-stores = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true }

# HTTP client for the LLM-backed grader (`TensorZeroJudge` /
# `LlmExecutorJudge`). The CLI no longer wraps `/v1/eval/*` so reqwest is
# only pulled in via the judge code path.
reqwest = { workspace = true, features = ["json"] }

# ULID for globally unique, lexicographically-sortable EvalRun ids.
ulid = "1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
# Self-link enables `awaken_eval::test_support` inside this crate's
# integration tests (which see the lib without `cfg(test)`).
awaken-eval = { path = ".", features = ["test-support"] }

[features]
default = []
# LLM-backed grading via TensorZero `[functions.judge]`. Enables the
# `judge` module; reqwest is a base dependency, no extra feature flag.
llm-judge = []
# Exposes `awaken_eval::test_support` — shared stub executors / judges
# used by this crate's lib + integration tests and by downstream crates
# (e.g. awaken-server's eval_api tests). Pure additive: no production
# code depends on it.
test-support = []

[lints]
workspace = true
