[package]
name = "awaken-ext-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "time", "sync"] }

[lints]
workspace = true
