[package]
name = "awaken-ext-observability"
version.workspace = true
edition.workspace = true

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
futures = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }

[lints]
workspace = true
