[package]
name = "awaken-ext-observability"
version.workspace = true
edition.workspace = true
description = "OpenTelemetry observability plugin with GenAI semantic conventions for Awaken"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }

# Optional OTel
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", optional = true }
opentelemetry-otlp = { version = "0.28", optional = true, features = ["http-proto", "reqwest-client"] }

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }
futures = { workspace = true }
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[lints]
workspace = true
