[package]
name = "awaken-ext-permission"
version.workspace = true
edition.workspace = true

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glob-match = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
