[package]
name = "awaken-ext-permission"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "Permission plugin with allow/deny/ask policies for Awaken tool execution"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence", "security"]

[dependencies]
awaken-runtime-contract = { workspace = true }
awaken-runtime = { workspace = true }
awaken-tool-pattern = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
glob-match = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
