[package]
name = "awaken-ext-reminder"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "Rule-based context message injection plugin for Awaken"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
awaken-tool-pattern = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
awaken-runtime = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true }

[lints]
workspace = true
