[package]
name = "awaken-ext-web-search"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "Web search tool extension for Awaken AI Agent runtime"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
awaken-contract = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "process", "time"] }
reqwest = { workspace = true }

[features]
default = []
serpapi = []

[dev-dependencies]
awaken-contract = { workspace = true }
httpmock = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "time"] }

[lints]
workspace = true
