[package]
name = "awaken-runtime"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "Phase-based execution engine, plugin system, and agent loop for Awaken"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence", "asynchronous"]

[dependencies]
awaken-runtime-contract = { workspace = true }
awaken-protocol-a2a = { workspace = true }
awaken-tool-pattern = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
typedmap = { workspace = true }
uuid = { workspace = true }
genai = { workspace = true }
tokio = { workspace = true }
# `form` is required by the credential broker's OAuth token-exchange call
# (POST application/x-www-form-urlencoded). Workspace default already enables `json`.
reqwest = { workspace = true, features = ["form"] }
schemars = { workspace = true }
jsonschema = { workspace = true }
parking_lot = { workspace = true }
metrics = { workspace = true }
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "rust_crypto"], optional = true }
awaken-stores = { workspace = true, optional = true }
# Test-only: the `ThreadRunStore`-backed checkpoint-reader adapter lives in
# server-contract (it names the full store). Runtime production code never
# constructs it; only the runtime's own tests wire a store-backed reader.
awaken-server-contract = { workspace = true, optional = true }

[features]
default = ["a2a", "handoff", "background", "credentials-google"]
a2a = []
handoff = []
background = []
parallel-tools = []
test-utils = ["dep:awaken-stores", "dep:awaken-server-contract"]
# Compile the Google OAuth (service-account JWT-Bearer) credential signer.
# When disabled, providers configured with credentials_kind="service_account_json"
# will fail at first mint with a clear error.
credentials-google = ["dep:jsonwebtoken"]

[dev-dependencies]
awaken-runtime = { path = ".", features = ["test-utils"] }
tokio = { workspace = true }
proptest = { workspace = true }
metrics-util = "0.20"

[lints]
workspace = true
