[package]
name = "awaken-stores"
version.workspace = true
edition.workspace = true

[dependencies]
awaken-contract = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"] }
uuid = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Optional backends
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"], default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"

[features]
default = []
file = []
postgres = ["dep:sqlx"]

[lints]
workspace = true
