[package]
name = "awaken-stores"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "Storage backends (memory, file, PostgreSQL) for Awaken agent state"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
awaken-contract = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "time"] }
uuid = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Optional backends
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"], default-features = false, optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tempfile = "3"
proptest = { workspace = true }
futures = { workspace = true }

[features]
default = []
file = []
postgres = ["dep:sqlx"]
sqlite = ["dep:rusqlite"]

[lints]
workspace = true
