[package]
name = "awaken-tool-pattern"
version.workspace = true
edition.workspace = true
description = "Glob and regex pattern matching for tool IDs in Awaken"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
glob-match = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
