[package]
name = "awaken-agent"
version.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/awaken-agent"
edition.workspace = true
description = "Production AI agent runtime for Rust — type-safe state, phase execution, multi-protocol serving"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "awaken"

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
awaken-ext-permission = { workspace = true, optional = true }
awaken-ext-observability = { workspace = true, optional = true }
awaken-ext-mcp = { workspace = true, optional = true }
awaken-ext-skills = { workspace = true, optional = true }
awaken-ext-generative-ui = { workspace = true, optional = true }
awaken-ext-reminder = { workspace = true, optional = true }
awaken-stores = { workspace = true }
awaken-server = { workspace = true, optional = true }
serde_json = { workspace = true }

[features]
default = ["full"]
permission = ["dep:awaken-ext-permission"]
observability = ["dep:awaken-ext-observability"]
mcp = ["dep:awaken-ext-mcp"]
skills = ["dep:awaken-ext-skills"]
reminder = ["dep:awaken-ext-reminder"]
server = ["dep:awaken-server"]
generative-ui = ["dep:awaken-ext-generative-ui"]
full = ["permission", "observability", "mcp", "skills", "reminder", "server", "generative-ui"]

[dev-dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
genai = { workspace = true }
awaken-runtime = { workspace = true }

[lints]
workspace = true
