[package]
name = "tirea-agentos"
version.workspace = true
edition = "2021"
description = "Plugin orchestration, sub-agent management, and lifecycle composition for tirea AgentOS"
license = "MIT OR Apache-2.0"
repository.workspace = true
keywords = ["agent", "llm", "orchestration", "plugin"]
categories = ["asynchronous"]

[dependencies]
tirea-state.workspace = true
tirea-contract.workspace = true
tirea-agent-loop.workspace = true
tirea-extension-permission = { workspace = true, optional = true }
tirea-extension-reminder = { workspace = true, optional = true }
tirea-extension-observability = { workspace = true, optional = true }
tirea-extension-skills = { workspace = true, optional = true }
tirea-extension-mcp = { workspace = true, optional = true }
schemars.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "time", "process"] }
thiserror = "2"
genai.workspace = true
futures = "0.3"
uuid = { version = "1", features = ["v4", "v7"] }
bytes = "1"
tracing = "0.1"

[features]
default = ["skills", "permission", "reminder", "observability"]
skills = ["dep:tirea-extension-skills"]
permission = ["dep:tirea-extension-permission"]
reminder = ["dep:tirea-extension-reminder"]
observability = ["dep:tirea-extension-observability"]
mcp = ["dep:tirea-extension-mcp"]

[dev-dependencies]
tirea-contract = { workspace = true, features = ["test-support"] }
tirea-store-adapters.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }

[lints]
workspace = true
