[package]
name = "ai-sdk-starter-agent"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
awaken-examples = { path = "../.." }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
clap = { workspace = true }

[[bin]]
name = "ai-sdk-starter-agent"
path = "src/main.rs"

[lints]
workspace = true
